# numerical_rs_template

./: .gitignore  Cargo.toml
data_analysis/: analysis.ipynb
raport/: raport.tex
