[package]
name = "numerical_rs_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quantum = { git = "https://github.com/Wleter/quantum.git" }

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
debug = true